@@ -26,6 +26,9 @@ Core and builtins
 Extension modules
 -----------------
 
+- The datetime.datetime and datetime.time classes are now properly
+  subclassable.
+
 - _tkinter.{get|set}busywaitinterval was added.
 
 - itertools.islice() now accepts stop=None as documented.
